# pytuin-desktop

./: .gitignore  DEV.md  DEV_GUIDE.md  DEV_Pytuin-Desktop_v3.md  README.md  SPEC.md  SPEC_Pytuin-Desktop_v3.md  USER.md  pyproject.toml
.templateer/: __init__.py  blocks.py  content.py  document.py
src/: Block_Spec.atrb
src/examples/: demo.py  demo_editor.py  test_text_roundtrip.py
src/pytuin_desktop/: __init__.py  block_container.py  block_props.py  builders.py  check.py  demo.py  diff.py  discovery.py  editor.py  enums.py  errors.py  id_generators.py  logger.py  metrics.py  models.py  parser.py  repository.py  serializers.py  services.py  template.py  validator.py  writer.py
src/pytuin_desktop/models/: __init__.py  base.py  blocks.py  content.py  dependency.py  document.py  props.py
src/tests/: Edited_spec.atrb  conftest.py  generated_project.atrb  test_batch_operations_v4.py  test_block_container_v4.py  test_block_operations_v4.py  test_block_props.py  test_block_props_v4.py  test_block_types_v1.py  test_builders.py  test_builders_enum_normalization.py  test_builders_return_enums.py  test_builders_v4.py  test_builders_with_generators_v4.py  test_complex_v1.py  test_discovery.py  test_discovery_v4.py  test_discriminated_blocks.py  test_document_diff_v4.py  test_editor.py  test_editor_serializer_injection_v4.py  test_editor_stream_v4.py  test_editor_with_container_v4.py  test_empty_document_v1.py  test_enum_roundtrip.py  test_error_messages.py  test_error_structure.py  test_errors_v4.py  test_id_generators_v4.py  test_integration.py  test_integration_flows_v3.py  test_integration_v1.py  test_integration_v4.py  test_logger.py  test_logger_v4.py  test_metrics_v4.py  test_models.py  test_models_enum_coercion.py  test_models_enum_coercion_v4.py  test_models_extra_forbid.py  (+26 more)
src/tests/diff_validation/0_run/: Atuin Tui.atrb  Block_Spec.atrb  Convert Obsidian Links to Hugo.atrb  Copy Obsidian Contents.atrb  Edit Story.atrb  Github Pages Hugo Website Deploy.atrb  Github Private - Public Repo Sync.atrb  Obsidian Website Sync.atrb  Overview.atrb  Saved Blocks.atrb  Scrape Story Page.atrb  Start Chrome - RDP.atrb  Stories.atrb  Story Editing Workflows.atrb  Story_Template.atrb  Untitled.atrb  Validate Hugo Directory Structure.atrb  Validate Obsidian Frontmatter.atrb
src/tests/v1/: 00_empty.atrb  01_single_paragraph.atrb  02_styled_paragraph.atrb  03_heading.atrb  04_horizontal_rule.atrb  05_script.atrb  10_complete_runbook.atrb  11_mixed_styles.atrb  20_editor_test.atrb  30_builder_test.atrb  40_simple_workflow.atrb  41_complex_workflow.atrb  42_template_direct.atrb
(+55 files in other folders)
