[project]
name = "pytuin_desktop"
version = "0.2.0"
description = "Python library for interacting with Atuin Desktop .atrb files"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "pyyaml>=6.0",
    #"templateer @ git+https://github.com/Bullish-Design/templateer@simple",
    "templateer",
]


[project.scripts]
#demo   = "examples.demo:main"
#demo-edit = "examples.demo_editor:main"
#config = "config:print_envs"
#main   = "main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/examples", "src/pytuin_desktop"]


[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
filterwarnings = [
  "ignore::pydantic.warnings.PydanticDeprecatedSince211:templateer.models"
]

[tool.uv.sources]
templateer = { git = "https://github.com/Bullish-Design/templateer", rev = "simple" }

#[tool.hatch.metadata]
#allow-direct-references = true

